@@ -2,6 +2,7 @@
 
 	* m4/clisp.m4 (CL_CLISP): add an early cl_cv_have_clisp=no
 	rename cl_cv_clisp_modset to cl_cv_clisp_linkset
+	also check for ${cl_cv_clisp_libdir}linkkit/modules.c, as in clisp-link
 
 2009-09-10  Sam Steingold  <sds@gnu.org>
 
